[project]
name = "thelist"
version = "0.1.0"
description = "Custom script to assist management / coordination of 'the list' of faces, which exists as a collection of image folders on a local drive, as well as a cloud-based google spreadsheet."
authors = [
    {name = "billyZduke", email = "billyzduke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "natsort (>=8.4.0,<9.0.0)",
    "macos-tags (>=1.5.1,<2.0.0)",
    "pygsheets (>=2.0.6,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "holoviews (>=1.22.1,<2.0.0)",
    "bokeh (>=3.8.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
]

[tool.poetry]
packages = [{include = "thelist", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
